First trial for searching the entered address using "MapsActivity"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         </activity>
 
         <activity android:name=".LoginActivity" />
-        <activity android:name=".LocationActivity" />
+        <activity android:name=".MapsActivity" />
     </application>
 
 </manifest>
