--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:support-media-compat:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:exifinterface:27.1.1'
 
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
@@ -33,4 +34,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation 'com.kakao.sdk:usermgmt:1.12.0'
+    implementation 'com.kakao.sdk:kakaotalk:1.12.0'
+    implementation 'com.kakao.sdk:auth:1.12.0'
+    // compile group: 'com.kakao.sdk', name: 'usermgmt', version: '1.12.0'
+    // compile group: 'com.kakao.sdk', name: 'kakaotalk', version: '1.12.0'
+    // compile group: 'com.kakao.sdk', name: 'auth', version: '1.12.0'
 }
